<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/mainActivity_dataBtn">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/gangwon"
                android:text="@string/uploadCalender_text_calender"
                android:textColor="@color/icon"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/dataRangeBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white_op"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_calendar_month_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <TextView
                android:id="@+id/data_picker_text"
                style="@style/uploadCalender_dataPick_textView"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/dataRangeBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dataRangeBtn"
                app:layout_constraintTop_toTopOf="@+id/dataRangeBtn" />

            <TextView
                android:id="@+id/textView2"
                style="@style/uploadCalender_title"
                android:text="@string/uploadCalender_text_persons"
                app:layout_constraintStart_toStartOf="@+id/text2"
                app:layout_constraintTop_toBottomOf="@+id/dataRangeBtn" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip1"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_one" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_couple" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_friend" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_family" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView"
                style="@style/uploadCalender_title"
                android:fontFamily="@font/gangwon"
                android:text="@string/uploadCalender_text_style"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/chipGroup"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip10"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_plan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip11"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_free" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip12"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_vacation" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip13"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_recollection" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip14"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_healing" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip15"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_activity" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip16"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_famous" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip17"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_romance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip18"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_emotional" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView5"
                style="@style/uploadCalender_title"
                android:text="@string/uploadCalender_text_mainImg"
                app:layout_constraintStart_toStartOf="@+id/chipGroup2"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup2" />

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:src="@drawable/baseline_image_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#00ff0000"
                android:fontFamily="@font/gangwon"
                android:padding="1dp"
                android:text="경로 추가"
                android:textColor="@color/icon"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/listView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                style="@style/uploadCalender_title"
                android:text="@string/uploadCalender_text_route"
                app:layout_constraintStart_toStartOf="@+id/imageButton"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />

            <LinearLayout
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/et_load1"
                    style="@style/uploadCalender_rote"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="경로1" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border"
                android:fontFamily="@font/gangwon"
                android:paddingHorizontal="40dp"
                android:text="@string/uploadCalender_boardBtn"
                android:textColor="@color/icon"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>