<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.UploadCalendarActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/gangwon"
                android:text="@string/uploadCalender_text_calender"
                android:textColor="@color/blue2"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/dataRangeBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white_op"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_calendar_month_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <TextView
                android:id="@+id/data_picker_text"
                style="@style/uploadCalender_dataPick_textView"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/dataRangeBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dataRangeBtn"
                app:layout_constraintTop_toTopOf="@+id/dataRangeBtn" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/gangwon"
                android:text="@string/uploadCalender_text_persons"
                android:textColor="@color/blue2"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataRangeBtn" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip1"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_one" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_couple" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_friend" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_persons_family" />

            </com.google.android.material.chip.ChipGroup>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/gangwon"
                android:text="@string/uploadCalender_text_style"
                android:textColor="@color/blue2"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/chipGroup"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_plan" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_free" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_vacation" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_recollection" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_healing" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_activity" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_famous" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_romance" />

                <com.google.android.material.chip.Chip
                    style="@style/uploadCalender_CustomChipStyle"
                    android:text="@string/uploadCalender_chip_style_emotional" />

            </com.google.android.material.chip.ChipGroup>


            <Button
                android:id="@+id/addLoad"
                android:layout_width="wrap_content"
                android:layout_height="48dp"

                android:text="경로 추가"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/gangwon"
                android:text="#경로 입력"
                android:textColor="@color/blue2"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/addLoad"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup2" />

            <LinearLayout
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/et_load1"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue2"
                    android:fontFamily="@font/gangwon"
                    android:hint="경로1"
                    android:textColor="@color/blue2"
                    android:textColorHint="@color/blue2"
                    android:textStyle="bold"


                    />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/view2"
        style="@style/all_toolbar_view"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        style="@style/all_toolbar_linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home"
            style="@style/all_toolbar_imageView.home" />

        <ImageView
            android:id="@+id/upload"
            style="@style/all_toolbar_imageView.upload" />

        <ImageView
            android:id="@+id/myPage"
            style="@style/all_toolbar_imageView.myPage" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:fontFamily="@font/gangwon"
        android:paddingHorizontal="40dp"
        android:text="@string/uploadCalender_boardBtn"
        android:textColor="@color/blue2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>